exports[`TrackProfile Component TrackProfile button 点击播放 操作 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/">
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <TrackProfile
      bigPic="www.image.com"
      label_name="label"
      playerStore={
        PlayerStore {
          "isPlaying": true,
          "isPlaylistOpen": false,
          "isShuffleMode": false,
          "isVolumeOpen": false,
          "playList": Array [
            Object {
              "id": 1234,
              "title": "hohohoho",
            },
          ],
          "playingTrack": Object {
            "id": 1234,
            "title": "hohohoho",
          },
          "volume": 0.25,
        }
      }
      track={
        Object {
          "id": 1234,
          "title": "hohohoho",
        }
      }
      type="HEI"
      user={
        Object {
          "id": 123,
          "username": "hoho",
        }
      }>
      <div>
        <div>
          <div />
          <div />
        </div>
        <div>
          <div>
            <span
              style={
                Object {
                  "backgroundImage": "url(www.image.com)",
                }
              } />
          </div>
          <ButtonInline
            onClick={[Function]}>
            <button
              onClick={[Function]}
              type="button">
              <i
                className="fa fa-pause fa-2x" />
            </button>
          </ButtonInline>
          <div>
            <div>
              <Homelink
                id={123}>
                <RouterLink
                  id={123}
                  path="home">
                  <NavLink
                    activeClassName="active"
                    to={
                      Object {
                        "pathname": "/users/home",
                        "search": "?id=123",
                      }
                    }>
                    <Route
                      path="/users/home">
                      <Link
                        replace={false}
                        to={
                          Object {
                            "pathname": "/users/home",
                            "search": "?id=123",
                          }
                        }>
                        <a
                          href="/users/home?id=123"
                          onClick={[Function]}>
                          hoho
                        </a>
                      </Link>
                    </Route>
                  </NavLink>
                </RouterLink>
              </Homelink>
              <h1>
                hohohoho
              </h1>
            </div>
          </div>
        </div>
      </div>
    </TrackProfile>
  </Router>
</StaticRouter>
`;

exports[`TrackProfile Component TrackProfile button 点击播放 操作 2`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/">
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <TrackProfile
      bigPic="www.image.com"
      label_name="label"
      playerStore={
        PlayerStore {
          "isPlaying": false,
          "isPlaylistOpen": false,
          "isShuffleMode": false,
          "isVolumeOpen": false,
          "playList": Array [
            Object {
              "id": 1234,
              "title": "hohohoho",
            },
          ],
          "playingTrack": Object {
            "id": 1234,
            "title": "hohohoho",
          },
          "volume": 0.25,
        }
      }
      track={
        Object {
          "id": 1234,
          "title": "hohohoho",
        }
      }
      type="HEI"
      user={
        Object {
          "id": 123,
          "username": "hoho",
        }
      }>
      <div>
        <div>
          <div />
          <div />
        </div>
        <div>
          <div>
            <span
              style={
                Object {
                  "backgroundImage": "url(www.image.com)",
                }
              } />
          </div>
          <ButtonInline
            onClick={[Function]}>
            <button
              onClick={[Function]}
              type="button">
              <i
                className="fa fa-play fa-3x" />
            </button>
          </ButtonInline>
          <div>
            <div>
              <Homelink
                id={123}>
                <RouterLink
                  id={123}
                  path="home">
                  <NavLink
                    activeClassName="active"
                    to={
                      Object {
                        "pathname": "/users/home",
                        "search": "?id=123",
                      }
                    }>
                    <Route
                      path="/users/home">
                      <Link
                        replace={false}
                        to={
                          Object {
                            "pathname": "/users/home",
                            "search": "?id=123",
                          }
                        }>
                        <a
                          href="/users/home?id=123"
                          onClick={[Function]}>
                          hoho
                        </a>
                      </Link>
                    </Route>
                  </NavLink>
                </RouterLink>
              </Homelink>
              <h1>
                hohohoho
              </h1>
            </div>
          </div>
        </div>
      </div>
    </TrackProfile>
  </Router>
</StaticRouter>
`;

exports[`TrackProfile Component 初始化渲染 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/">
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }>
    <TrackProfile
      bigPic="www.image.com"
      label_name="label"
      playerStore={
        PlayerStore {
          "isPlaying": false,
          "isPlaylistOpen": false,
          "isShuffleMode": false,
          "isVolumeOpen": false,
          "playList": Array [],
          "volume": 0.25,
        }
      }
      track={
        Object {
          "id": 1234,
          "title": "hohohoho",
        }
      }
      type="HEI"
      user={
        Object {
          "id": 123,
          "username": "hoho",
        }
      }>
      <div>
        <div>
          <div />
          <div />
        </div>
        <div>
          <div>
            <span
              style={
                Object {
                  "backgroundImage": "url(www.image.com)",
                }
              } />
          </div>
          <ButtonInline
            onClick={[Function]}>
            <button
              onClick={[Function]}
              type="button">
              <i
                className="fa fa-play fa-3x" />
            </button>
          </ButtonInline>
          <div>
            <div>
              <Homelink
                id={123}>
                <RouterLink
                  id={123}
                  path="home">
                  <NavLink
                    activeClassName="active"
                    to={
                      Object {
                        "pathname": "/users/home",
                        "search": "?id=123",
                      }
                    }>
                    <Route
                      path="/users/home">
                      <Link
                        replace={false}
                        to={
                          Object {
                            "pathname": "/users/home",
                            "search": "?id=123",
                          }
                        }>
                        <a
                          href="/users/home?id=123"
                          onClick={[Function]}>
                          hoho
                        </a>
                      </Link>
                    </Route>
                  </NavLink>
                </RouterLink>
              </Homelink>
              <h1>
                hohohoho
              </h1>
            </div>
          </div>
        </div>
      </div>
    </TrackProfile>
  </Router>
</StaticRouter>
`;
